# forex-forecast

./: .env.txt  .gitignore  config.py  pyproject.toml
data/: loader.py  preprocessor.py
evaluation/: metrics.py
features/: engineering.py
models/: base.py  econometric.py  ml.py
visualization/: plots.py
